# litellm-proxy-langfuse

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  TEST_PLAN.md  USAGE.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml  model_config.yaml
docker/: Dockerfile  README.md  docker-compose.yml  test_api.py  test_api.sh
examples/: cursor_config.json  test_requests.py  vscode_settings.json
src/: __init__.py
src/config/: settings.py
src/integrations/: __init__.py  langfuse_client.py  llm_providers.py
src/monitoring/: __init__.py  logger.py  metrics.py
src/proxy/: __init__.py  middleware.py  routes.py  server.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_curl.sh  test_integration.py  test_langfuse.py  test_proxy.py
